<resources>
    <string name="app_name">SpotiMy</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_dashboard">Dashboard</string>

    <string name="tracks">Tracks</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="track">Track</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="hint">Search...</string>
    <string name="popular">Popular Tracks</string>
    <string name="discover">Discover</string>
    <string name="settings">Settings</string>
    <string name="recent_tracks">Recent Tracks</string>
    <string name="recent_albums">Recent Albums</string>
    <string name="recent_artists">Recent Artists</string>
    <string name="profile">Profile</string>
    <string name="queue">Queue</string>
    <string name="playlists">Playlists</string>


    <string name="com_spotify_sdk_redirect_scheme">yourscheme</string>
    <string name="com_spotify_sdk_redirect_host">yourhost</string>

</resources>
